// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot 1`] = `
<div>
  <div
    class="groups-list groups-list-no-padding"
  >
    <div
      class="groups-list--header"
    >
      <div
        class="group-name group-name-adjusted"
      >
        Group Name
      </div>
      <div
        class="group-content"
      >
        <div
          class="group-description group-description-adjusted"
        >
          Member Count
        </div>
        <div
          class="group-description group-description-adjusted"
        >
          Roles
        </div>
        <div
          class="group-actions"
        />
      </div>
    </div>
    <div
      class="groups-list--body"
      id="groups-list--body"
    >
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DNMembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
    </div>
    <div
      class="groups-list--footer"
    >
      <div
        class="counter"
      >
        1 - 1 of 1
      </div>
      <button
        aria-label="Go to previous page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
      <button
        aria-label="Go to next page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69"
        data-testid="page-link-next"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupList should match snapshot with paging 1`] = `
<div>
  <div
    class="groups-list groups-list-no-padding"
  >
    <div
      class="groups-list--header"
    >
      <div
        class="group-name group-name-adjusted"
      >
        Group Name
      </div>
      <div
        class="group-content"
      >
        <div
          class="group-description group-description-adjusted"
        >
          Member Count
        </div>
        <div
          class="group-description group-description-adjusted"
        >
          Roles
        </div>
        <div
          class="group-actions"
        />
      </div>
    </div>
    <div
      class="groups-list--body"
      id="groups-list--body"
    >
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN0
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN0MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN1
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN1MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN2
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN2MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN3
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN3MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN4
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN4MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN5
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN5MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN6
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN6MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN7
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN7MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN8
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN8MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
      <div
        class="group"
        id="group"
      >
        <div
          class="group-row"
          id="group-row"
        >
          <span
            class="group-name row-content"
          >
            DN9
          </span>
          <span
            class="group-description row-content"
          >
            <button
              class="style--none color--link"
              id="DN9MembersToggle"
            >
              3 members
            </button>
          </span>
          <div
            class="group-description row-content roles"
          >
            <div
              class="MenuWrapper "
            >
              <div>
                <a
                  data-testid="current-role"
                >
                  <span>
                    Member
                  </span>
                  <span
                    class="caret"
                  />
                </a>
              </div>
            </div>
          </div>
          <span
            class="group-actions"
            id="group-actions"
          >
            <a
              class=""
              href="#"
            >
              Remove
            </a>
          </span>
        </div>
      </div>
    </div>
    <div
      class="groups-list--footer"
    >
      <div
        class="counter"
      >
        1 - 10 of 30
      </div>
      <button
        aria-label="Go to previous page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69"
        disabled=""
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
      <button
        aria-label="Go to next page"
        class="_icon-button_mytxt_2 _icon-button--size-small_mytxt_69"
        data-testid="page-link-next"
        type="button"
      >
        <span
          aria-hidden="true"
          class="_icon-button__icon-slot_mytxt_33"
        >
          <div
            aria-hidden="true"
            class="_icon_1i355_2 _icon--size-16_1i355_38"
          >
            <div
              class="_icon__glyph-area_1i355_9"
            >
              <svg
                fill="currentColor"
                height="18"
                version="1.1"
                viewBox="0 0 24 24"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </div>
          </div>
        </span>
      </button>
    </div>
  </div>
</div>
`;
